<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="122dp"
    android:layout_height="104dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <ImageButton
            android:id="@+id/dPad_RIGHT"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Text_ButtonRIGHT"
            android:rotation="90"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/directional_button" />

        <ImageButton
            android:id="@+id/dPad_DOWN"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Text_ButtonDOWN"
            android:rotation="180"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/directional_button" />

        <ImageButton
            android:id="@+id/dPad_UP"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Text_ButtonUP"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/directional_button" />

        <ImageButton
            android:id="@+id/dPad_LEFT"
            android:layout_width="52dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Text_ButtonLEFT"
            android:rotation="270"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/directional_button" />
</android.support.constraint.ConstraintLayout>